# MNPR

./: .gitignore  LICENSE  MNPR.mod  README.md  install.mel
plugins/: CMakeLists.txt  MOperationShader.cpp  MOperationShader.h  MPluginUtils.cpp  MPluginUtils.h  MRenderTargetList.h  _buildWindowsDebug.bat  _buildWindowsRelease.bat  mnpr_cmd.cpp  mnpr_cmd.h  mnpr_configNode.cpp  mnpr_hudRender.cpp  mnpr_hudRender.h  mnpr_nodes.h  mnpr_present.h  mnpr_quadRender.cpp  mnpr_quadRender.h  mnpr_renderer.cpp  mnpr_renderer.h  mnpr_sceneRender.cpp  mnpr_sceneRender.h  node_charcoal.hpp  node_oilpaint.hpp  node_sandbox.hpp  node_watercolor.hpp  pluginMain.cpp  style_charcoal.hpp  style_oilpaint.hpp  style_sandbox.hpp  style_watercolor.hpp
plugins/cmake/: FindMaya.cmake  Utils.cmake
presets/materials/: _default.json  _proxy.json  charcoal.json  green.json  orange.json
presets/styles/: _charcoal.json  _watercolor.json
scripts/: AEmnprConfigTemplate.mel  coopLib.py  coopQt.py  mnpr_FX.py  mnpr_UIs.py  mnpr_info.py  mnpr_matPresets.py  mnpr_nFX.py  mnpr_pFX.py  mnpr_presets.py  mnpr_runner.py  mnpr_setup.py  mnpr_system.py  mnpr_updater.py
shaders/: PrototypeC.fx  PrototypeC.ogsfx  _compileHLSL.bat  mnpr_geoproxy.sfx  mnpr_uber.sfx  quadAA.ogsfx  quadAA10.fx  quadAdjustLoad.ogsfx  quadAdjustLoad10.fx  quadBlend.ogsfx  quadBlend10.fx  quadColorTransform.ogsfx  quadColorTransform10.fx  quadDebug.ogsfx  quadDebug10.fx  quadEdgeDetection.ogsfx  quadEdgeDetection10.fx  quadEdgeManipulation.ogsfx  quadEdgeManipulation10.fx  quadGapsOverlaps.ogsfx  quadGapsOverlaps10.fx  quadPigmentApplication.ogsfx  quadPigmentApplication10.fx  quadPigmentManipulation.ogsfx  quadPigmentManipulation10.fx  quadSubstrate.ogsfx  quadSubstrate10.fx  quadTest10.fx
shaders/ch/: quadBlur.ogsfx  quadBlur10.fx  quadCharcoal.ogsfx  quadCharcoal10.fx  quadEdgeBlur.ogsfx  quadEdgeBlur10.fx  quadEdgeManipulation.ogsfx  quadEdgeManipulation10.fx  quadOffset.ogsfx  quadOffset10.fx  quadOffsetBlend.ogsfx  quadOffsetBlend10.fx  quadSmudging.ogsfx  quadSmudging10.fx
shaders/include/: packUnpack.fxh  packUnpack.ogsfh  quadColorTransform.fxh  quadColorTransform.ogsfh  quadCommon.fxh  quadCommon.ogsfh
shaders/op/: README.md
shaders/wc/: quadSeparable.ogsfx  quadSeparable10.fx
shelves/: shelf_MNPR.mel  shelf_MNPR_DEV.mel
textures/: Download Substrates.url
